scrollbar fix

--- a/home.css
+++ b/home.css
@@ -263,6 +263,11 @@ a{
     transition-duration: 2s; /* change the duration here */
 }
 
+ .eventBannerContainer::-webkit-scrollbar {
+    display: none;
+  }
+  
+
 .eventBanner {
     flex: 0 0 auto;
     height: 500px;
